--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator='iPhone 15'",
+    "ios-release": "react-native run-ios --mode Release --device='iPhone von Sven'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
@@ -14,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-safe-area-context": "^4.8.0",
