--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "i18next": "^23.7.10",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.73.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
