--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "install-ios": "cd ios && bundle install && bundle exec pod install"
+    "install-ios": "cd ios && bundle install && pod install"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.20",
     "i18next": "^23.7.10",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.73.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.2"
