--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
