--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "ios-se": "react-native run-ios --simulator='iPhone SE (3rd generation)'",
     "ios": "react-native run-ios --simulator='iPhone 15'",
     "ios-release": "react-native run-ios --mode Release --device='iPhone von Sven'",
     "lint": "eslint .",
