--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install-ios": "cd ios && bundle install && pod install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
