--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "date-fns": "^3.0.6",
     "i18next": "^23.7.10",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
