Update version number

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "react-native run-android",
     "ios-se": "react-native run-ios --simulator='iPhone SE (3rd generation)'",
     "ios": "react-native run-ios --simulator='iPhone 15'",
-    "ios-release": "react-native run-ios --mode=Release --device='iPhone von Sven'",
+    "ios-release": "react-native build-ios --mode=Release",
+    "android-release": "react-native build-android --mode=release",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
