--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "date-fns": "^3.0.6",
+    "i18next": "^23.7.10",
     "intl-pluralrules": "^2.0.1",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
