--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.73.2",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.0",
